// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelemetrySettings renders with enabled = false 1`] = `
<GenericToggle
  description={
    <EnableTelemetrySettingDescription
      LinkComponent={[Function]}
    />
  }
  enabled={false}
  id="enable-telemetry"
  name="Help improve Accessibility Insights for Web"
  onClick={[Function]}
/>
`;

exports[`TelemetrySettings renders with enabled = true 1`] = `
<GenericToggle
  description={
    <EnableTelemetrySettingDescription
      LinkComponent={[Function]}
    />
  }
  enabled={true}
  id="enable-telemetry"
  name="Help improve Accessibility Insights for Web"
  onClick={[Function]}
/>
`;
